--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,3 +1,12 @@
+h3 {
+	font-size: 15px;
+	font-weight: 600
+}
+
+p {
+	font-size: 82%
+}
+
 .wrapper{
 	margin: auto;
 	width:100%;
@@ -22,6 +31,58 @@
 	color:#1ED761;
 	z-index:7;
 	font-family:verdana;
+}
+
+header>div {
+	z-index: 2;
+	height: 70px;
+	margin: 0 auto;
+	display: block;
+	position: relative;
+	overflow: hidden
+}
+
+header .middle {
+	position: absolute;
+	text-align: center;
+	margin-top: 3px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%)
+}
+
+header .middle h3 {
+	margin-bottom: 3px
+}
+
+header .middle p {
+	margin-bottom: 0px;
+	color: #9197a5
+}
+
+header .right {
+	height: 90px;
+	overflow: hidden;
+	line-height: 70px;
+	text-align: right;
+	width: auto;
+	float: right;
+	position: relative
+}
+
+header .username {
+	display: inline-block;
+	height: 70px;
+	font-size: 14px;
+	line-height: 72px;
+	font-weight: 600
+}
+
+header .left {
+	width: 200px;
+	float: left;
+	position: relative
 }
 
 .col-left{
@@ -82,6 +143,7 @@
 
 .message-sent,
 .message-received {
+	width: 90%;
 	margin-top: 0.3em;
 	margin-bottom: 0.3em;
 	padding: 0.5em 0.6em;
@@ -106,4 +168,63 @@
 	color:#1ED761;
 	z-index:7;
 	font-family:verdana;
+}
+
+.message-sent,
+.message-received {
+	clear: both;
+	position: relative
+}
+
+.message-sent::before,
+.message-received::before,
+.message-sent::after,
+.message-received::after {
+	content: '';
+	display: table
+}
+
+.message-sent p,
+.message-received p {
+	margin: 0;
+	line-height: 1.5
+}
+
+.message-sent {
+	float: right;
+	color: white;
+	background-color: #1db954;
+	border-radius: 0.5em 0.25em 0.25em 0.5em
+}
+
+.message-sent:first-child {
+	border-radius: 0.5em 0.5em 0.25em 0.5em
+}
+
+.message-sent:last-child {
+	border-radius: 0.25em 0.25em 0.5em 0.5em
+}
+
+.message-sent:only-child {
+	border-radius: 0.5em
+}
+
+.message-received {
+	float: left;
+	color: black;
+	background-color: white;
+	border-radius: 0.25em 0.5em 0.5em 0.25em
+}
+
+.message-received:first-child {
+	border-radius: 0.5em 0.5em 0.5em 0.25em;
+	margin-top: 0px
+}
+
+.message-received:last-child {
+	border-radius: 0.25em 0.5em 0.5em 0.5em
+}
+
+.message-received:only-child {
+	border-radius: 0.5em
 }
